cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(GoogleInterviewPrep)

set(CMAKE_CXX_FLAGS "-std=c++11")

add_executable(rotatearray0 src/rotatearray0.cpp)
add_executable(rotatearray1 src/rotatearray1.cpp)
add_executable(rotatearray2 src/rotatearray2.cpp)
add_executable(reversewords src/reversewords.cpp)
add_executable(evaluateRPN src/evaluateRPN.cpp)
add_executable(isomorphicstrings src/isomorphicstrings.cpp)
#add_executable()

